Fix: Fixed right columns should have the area above the scrollbar blocked out - this wasn't happening for Bootstrap, Foundation or jQuery UI
- Thread 44525

Sync to source repo @2d598747e0915220f39a2766f368f424529b7ad6

--- a/css/fixedColumns.bootstrap4.css
+++ b/css/fixedColumns.bootstrap4.css
@@ -43,6 +43,10 @@ div.DTFC_RightFootWrapper table {
   background-color: white;
 }
 
+div.DTFC_Blocker {
+  background-color: white;
+}
+
 table.dataTable.table-striped.DTFC_Cloned tbody tr:nth-of-type(odd) {
   background-color: #F3F3F3;
 }
